[package]
name = "tea_fungus"
version = "0.1.0"
authors = ["Anton Schreiner <antonschrein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.10.*"
bincode = "1.1.4"
serde = { version = "1.0", features = ["derive"] }
rust-lzma = "0.4.0"
rand = "0.6"