[package]
name = "tea_fungus"
version = "0.1.0"
authors = ["Anton Schreiner <antonschrein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.4"
serde = { version = "1.0", features = ["derive"] }
rust-lzma = "0.4.0"
rand = "0.6"
vulkano = "0.11"
vulkano-shaders = "0.11"
vulkano-win = "0.11"
cgmath = "0.16"
image = "0.20"
winit = "0.18"
time = "0.1.37"